# gha_demo

./: .pre-commit-config.yaml  Dockerfile  Python_CI.yml  README.md  pyproject.toml
.github/workflows/: Python_CD.yml  Python_CI.yml
demo_gha/: pyproject.toml
python_ci_pipeline/: Python_CI.yml
python_ci_pipeline/src/: functions.py
python_ci_pipeline/tests/: functions.py
src/: functions.py
tests/: functions.py  test_functions.py
